# Practical1

./: CMakeLists.txt
Practical1/: CMakeLists.txt  Practical1.cpp  Practical1.h
